--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       <section class="main-img">
         <div class="main-img_grid">
           <div class="img-grid_column">
-            <h2>MEN"S NEW ARRIVALS</h2>
+            <h2>MEN'S NEW ARRIVALS</h2>
             <img src="img/18.jpeg" />
           </div>
           <div class="img-grid_column">
-            <h2>WOMEN"S NEW ARRIVALS</h2>
+            <h2>WOMEN'S NEW ARRIVALS</h2>
             <img src="img/18.jpeg" />
           </div>
         </div>
